# taskmanagers

./: .gitignore  README.md  pyproject.toml
src/accounts/: forms.py  urls.py  views.py
src/accounts/templates/: signin.html  signup.html
src/config/: settings.py  urls.py
src/config/static/css/: style.css
src/config/templates/: base.html
src/foodfactory/: apps.py  urls.py  views.py
src/foodfactory/templates/: index.html
src/locale/en/LC_MESSAGES/: django.po
src/locale/es/LC_MESSAGES/: django.po
